Phase One - Unit and Integration Tests (#1)
Added some simple Unit tests, testing Asset and Expense data via API. Also added Android app integration tests, for the charts.